# GD32C10x_Firmware_Library

./: CMakeLists.txt  SConstruct
CMSIS/GD/GD32C10x/Include/: gd32c10x.h  gd32c10x_libopt.h  system_gd32c10x.h
CMSIS/GD/GD32C10x/Source/: system_gd32c10x.c
GD32C10x_standard_peripheral/Include/: gd32c10x_adc.h  gd32c10x_bkp.h  gd32c10x_can.h  gd32c10x_crc.h  gd32c10x_ctc.h  gd32c10x_dac.h  gd32c10x_dbg.h  gd32c10x_dma.h  gd32c10x_exmc.h  gd32c10x_exti.h  gd32c10x_fmc.h  gd32c10x_fwdgt.h  gd32c10x_gpio.h  gd32c10x_i2c.h  gd32c10x_misc.h  gd32c10x_pmu.h  gd32c10x_rcu.h  gd32c10x_rtc.h  gd32c10x_spi.h  gd32c10x_timer.h  gd32c10x_usart.h  gd32c10x_wwdgt.h
GD32C10x_standard_peripheral/Source/: gd32c10x_adc.c  gd32c10x_bkp.c  gd32c10x_can.c  gd32c10x_crc.c  gd32c10x_ctc.c  gd32c10x_dac.c  gd32c10x_dbg.c  gd32c10x_dma.c  gd32c10x_exmc.c  gd32c10x_exti.c  gd32c10x_fmc.c  gd32c10x_fwdgt.c  gd32c10x_gpio.c  gd32c10x_i2c.c  gd32c10x_misc.c  gd32c10x_pmu.c  gd32c10x_rcu.c  gd32c10x_rtc.c  gd32c10x_spi.c  gd32c10x_timer.c  gd32c10x_usart.c  gd32c10x_wwdgt.c
GD32C10x_usbfs_library/device/core/Include/: usbd_core.h  usbd_enum.h  usbd_transc.h
GD32C10x_usbfs_library/device/core/Source/: usbd_core.c  usbd_enum.c  usbd_transc.c
GD32C10x_usbfs_library/driver/Include/: drv_usb_core.h  drv_usb_dev.h  drv_usb_host.h  drv_usb_hw.h  drv_usb_regs.h  drv_usbd_int.h  drv_usbh_int.h
GD32C10x_usbfs_library/driver/Source/: drv_usb_core.c  drv_usb_dev.c  drv_usb_host.c  drv_usbd_int.c  drv_usbh_int.c
GD32C10x_usbfs_library/host/core/Include/: usbh_core.h  usbh_enum.h  usbh_pipe.h  usbh_transc.h
GD32C10x_usbfs_library/host/core/Source/: usbh_core.c  usbh_enum.c  usbh_pipe.c  usbh_transc.c
GD32C10x_usbfs_library/ustd/class/cdc/: usb_cdc.h
GD32C10x_usbfs_library/ustd/common/: usb_ch9_std.h
(+41 files in other folders)
